--- a/src/main/resources/static/css/helpers.css
+++ b/src/main/resources/static/css/helpers.css
@@ -38,17 +38,17 @@
 }
 /* background */
 .hero {
-  background: black url(../images/background.jpg) center / cover;
+  background: black url(../img/background.jpg) center / cover;
 }
 
 @media (max-width: 1024px) {
   .hero {
-    background: black url(../images/background.jpg) center / cover;
+    background: black url(../img/background.jpg) center / cover;
   }
 }
 @media (max-width: 768px) {
   .hero {
-    background: black url(../images/background.jpg) center / cover;
+    background: black url(../img/background.jpg) center / cover;
   }
 }
 
