--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -36,13 +36,13 @@
           <div class="columns is-mobile is-marginless heading has-text-weight-bold">
               <div class="column left">
                   <figure class="image">
-                      <img th:src="@{/images/CSCParts_logo.png}" style="width: auto; height: auto;">
+                      <img th:src="@{/img/CSCParts_logo.png}" style="width: auto; height: auto;">
                   </figure>
               </div>
               
               <div class="column right">
                   <figure class="navbar-item image">
-                      <img th:src="@{/images/logo.png}" style="width:203px; height: 203px;">
+                      <img th:src="@{/img/logo.png}" style="width:203px; height: 203px;">
                   </figure>
               </div>
           </div>
@@ -54,12 +54,12 @@
               <div class="column is-5-tablet is-4-desktop is-3-widescreen">
                 <form th:action="@{/login}" method="POST" class="box">
                   <div class="field">
-                    <label for="" class="label">Email</label>
+                    <label for="" class="label">Login name</label>
                     <div class="control has-icons-left">
-                        <input type="email" id="email" name="email" th:placeholder="Email"
+                        <input type="input" id="userName" name="userName" th:placeholder="userName"
                         class="input" required/>
                       <span class="icon is-small is-left">
-                        <i class="fa fa-envelope"></i>
+                        <i class="fa fa-user"></i>
                       </span>
                     </div>
                   </div>
@@ -85,7 +85,7 @@
                     </button>
                   </div>
                   <div align="center" th:if="${param.error}">
-                    <p style="font-size: 20; color: #FF1C19;">Email or Password invalid, please verify</p>
+                    <p style="font-size: 20; color: #FF1C19;">Login name or Password invalid, please verify</p>
                 </div>
                 </form>
               </div>
