dashboad new design

--- a/src/main/resources/templates/admin/chartMonthToDate.html
+++ b/src/main/resources/templates/admin/chartMonthToDate.html
@@ -105,7 +105,7 @@
               <div class="row">
                   <div class="col-md-12">
         <section class="text-left px-2 mt-2">
-          <span class="h3">DASHBOARD</span><span class="h6" th:text="${'Quotes , Orders & Invoices -  Today ('+toDay+')'}"></span>
+          <span class="h3">DASHBOARD</span><span class="h6" th:text="${'Quotes , Orders & Invoices -  This Month ('+thisMonth+')'}"></span>
         </section>
         <div class="album py-3 px-2 bg-light">
           <div class="row">
@@ -115,8 +115,8 @@
                   <div class="row no-gutters">
                     <div class="col-md-5" id="guage_div_quotes" ></div>
                     <div class="col-md-7 card-body" style="padding-top: 20px;">
-                      <button type="button" class="btn btn-primary btn-sm" th:title="${'Total : $' + salesQuotesDaily}"><span th:text="${'Total : $ ' + salesQuotesDaily}"></span></button>
-                      <button type="button" class="btn btn-success btn-sm" th:title="${'Target : $' + salesTargetDaily}"><span th:text="${'Target : $ ' + salesTargetDaily}"></span></button>
+                      <button type="button" class="btn btn-primary btn-sm" th:title="${'Total : $' + salesQuotesMTD}"><span th:text="${'Total : $ ' + salesQuotesMTD}"></span></button>
+                      <button type="button" class="btn btn-success btn-sm" th:title="${'Target : $' + salesTargetMTD}"><span th:text="${'Target : $ ' + salesTargetMTD}"></span></button>
                       <div class="table-responsive mt-2 ml-2 mr-2 small">
                       <table class="table table-sm table-bordered">
                         <thead>
@@ -129,7 +129,7 @@
                         <tbody>
                           <tr>
                             <th scope="row">Qty</th>
-                            <td th:text="${salesQuotesQtyDaily}"></td>
+                            <td th:text="${salesQuotesQtyMTD}"></td>
                             <td>50</td>
                          </tr>
                           <tr>
@@ -156,8 +156,8 @@
                   <div class="row no-gutters">
                     <div class="col-md-5" id="guage_div_orders" ></div>
                     <div class="col-md-7 card-body" style="padding-top: 20px;">
-                      <button type="button" class="btn btn-warning btn-sm" th:title="${'Total : $' + salesOrderedDaily}"><span th:text="${'Total : $ ' + salesOrderedDaily}"></span></button>
-                      <button type="button" class="btn btn-success btn-sm" th:title="${'Target : $' + salesTargetDaily}"><span th:text="${'Target : $ ' + salesTargetDaily}"></span></button>
+                      <button type="button" class="btn btn-warning btn-sm" th:title="${'Total : $' + salesOrderedMTD}"><span th:text="${'Total : $ ' + salesOrderedMTD}"></span></button>
+                      <button type="button" class="btn btn-success btn-sm" th:title="${'Target : $' + salesTargetMTD}"><span th:text="${'Target : $ ' + salesTargetMTD}"></span></button>
                       <div class="table-responsive mt-2 ml-2 mr-2 small">
                       <table class="table table-sm table-bordered">
                         <thead>
@@ -170,7 +170,7 @@
                         <tbody>
                           <tr>
                             <th scope="row">Qty</th>
-                            <td th:text="${salesOrderedQtyDaily}"></td>
+                            <td th:text="${salesOrderedQtyMTD}"></td>
                             <td>50</td>
                          </tr>
                           <tr>
@@ -197,8 +197,8 @@
                   <div class="row no-gutters">
                     <div class="col-md-5" id="guage_div_invoices" ></div>
                     <div class="col-md-7 card-body" style="padding-top: 20px;">
-                      <button type="button" class="btn btn-danger btn-sm" th:title="${'Total : $' + salesInvoicedDaily}"><span th:text="${'Total : $ ' + salesInvoicedDaily}"></span></button>
-                      <button type="button" class="btn btn-success btn-sm" th:title="${'Target : $' + salesTargetDaily}"><span th:text="${'Target : $ ' + salesTargetDaily}"></span></button>
+                      <button type="button" class="btn btn-danger btn-sm" th:title="${'Total : $' + salesInvoicedMTD}"><span th:text="${'Total : $ ' + salesInvoicedMTD}"></span></button>
+                      <button type="button" class="btn btn-success btn-sm" th:title="${'Target : $' + salesTargetMTD}"><span th:text="${'Target : $ ' + salesTargetMTD}"></span></button>
                       <div class="table-responsive mt-2 ml-2 mr-2 small">
                       <table class="table table-sm table-bordered">
                         <thead>
@@ -211,7 +211,7 @@
                         <tbody>
                           <tr>
                             <th scope="row">Qty</th>
-                            <td th:text="${salesInvoicedQtyDaily}"></td>
+                            <td th:text="${salesInvoicedQtyMTD}"></td>
                             <td>50</td>
                          </tr>
                           <tr>
@@ -287,14 +287,14 @@ function SidebarCollapse () {
 }
   /*<![CDATA[*/
 
-  var salesOrderedDaily = /*[[${salesOrderedDaily}]]*/ '0';
-  var salesInvoicedDaily = /*[[${salesInvoicedDaily}]]*/ '0';
-  var salesQuotesDaily = /*[[${salesQuotesDaily}]]*/ '0';
-  var salesTargetDaily = /*[[${salesTargetDaily}]]*/ '0';
-  console.log('salesOrderedDaily-->'+salesOrderedDaily);
-  console.log('salesInvoicedDaily-->'+salesInvoicedDaily);
-  console.log('salesQuotesDaily-->'+salesQuotesDaily);
-  console.log('salesTargetDaily-->'+salesTargetDaily);
+  var salesOrderedMTD = /*[[${salesOrderedMTD}]]*/ '0';
+  var salesInvoicedMTD = /*[[${salesInvoicedMTD}]]*/ '0';
+  var salesQuotesMTD = /*[[${salesQuotesMTD}]]*/ '0';
+  var salesTargetMTD = /*[[${salesTargetMTD}]]*/ '0';
+  console.log('salesOrderedMTD-->'+salesOrderedMTD);
+  console.log('salesInvoicedMTD-->'+salesInvoicedMTD);
+  console.log('salesQuotesMTD-->'+salesQuotesMTD);
+  console.log('salesTargetMTD-->'+salesTargetMTD);
 
   var targetAchievedOrders = /*[[${targetAchievedOrders}]]*/ 0;
   var targetAchievedQuotes = /*[[${targetAchievedQuotes}]]*/ 0;
