--- a/src/main/resources/templates/admin/chartMonthToDate.html
+++ b/src/main/resources/templates/admin/chartMonthToDate.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-    <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset=utf-8>
     <meta http-equiv=X-UA-Compatible content="IE=edge">
@@ -19,93 +19,15 @@
   <body>
     <header>
       <!-- Bootstrap NavBar -->
-  <nav class="navbar navbar-expand-md navbar-light" style="background-color: black;">
-      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-      </button>
-      <a class="navbar-brand" href="#">
-          <a class="navbar-brand" th:href="@{/admin/home}"><img src="../img/logo.c90ecd5a.png" height="30" class="d-inline-block align-top" alt="OneSysConsulting"></a>
-          <span class="menu-collapsed"></span>
-      </a>
-      <div class="collapse navbar-collapse" id="navbarNavDropdown">
-          <ul class="navbar-nav ml-auto">
-              <li class="nav-item active">
-                   <a class="nav-link text-info"  th:href="@{/admin/home}"><i class="fas fa-home"></i>Home</a>
-              </li>
-              <li class="nav-item">
-                  <a class="nav-link text-info" href="/logout"><i class="fas fa-sign-out-alt"></i>Logout</a>
-              </li>
-              <!-- This menu is hidden in bigger devices with d-sm-none. 
-             The sidebar isn't proper for smaller screens imo, so this dropdown menu can keep all the useful sidebar itens exclusively for smaller screens  -->
-              <li class="nav-item dropdown d-sm-block d-md-none">
-                  <a class="nav-link dropdown-toggle" href="#" id="smallerscreenmenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> Menu </a>
-                  <div class="dropdown-menu" aria-labelledby="smallerscreenmenu">
-                      <a class="dropdown-item"  th:href="@{/admin/home}">Home</a>
-                      <a class="dropdown-item"  th:href="@{/admin/dashboard}">Dashboard</a>
-                  </div>
-              </li><!-- Smaller devices menu END -->
-          </ul>
-      </div>
-  </nav><!-- NavBar END -->
+      <div th:replace="headerLayout :: header"> </div>
   </header>
-  <div class="row" id="body-row">
-        <div id="sidebar-container" class="sidebar-expanded d-none d-md-block">
-          <!-- d-* hiddens the Sidebar in smaller devices. Its itens can be kept on the Navbar 'Menu' -->
-          <!-- Bootstrap List Group -->
-          <ul class="list-group">
-              <!-- Separator with title -->
-              <li class="list-group-item sidebar-separator-title text-muted d-flex align-items-center menu-collapsed">
-                  <small>MAIN MENU</small>
-              </li>
-              <!-- /END Separator -->
-              <!-- Menu with submenu -->
-              <a th:href="@{/admin/home}" class="bg-dark list-group-item list-group-item-action">
-                  <div class="d-flex w-100 justify-content-start align-items-center">
-                      <span class="fas fa-home fa-fw mr-3"></span>
-                      <span class="menu-collapsed">Home</span>
-                  </div>
-              </a>
-              <a href="#submenu1" data-toggle="collapse" aria-expanded="false" class="bg-dark list-group-item list-group-item-action flex-column align-items-start">
-                  <div class="d-flex w-100 justify-content-start align-items-center">
-                      <span class="fas fa-tachometer-alt fa-fw mr-3"></span>
-                      <span class="menu-collapsed">Dashboard</span>
-                      <span class="submenu-icon ml-auto"></span>
-                  </div>
-              </a>
-              <!-- Submenu content -->
-              <div id='submenu1' class="sidebar-submenu">
-                  <a th:href="@{/admin/chartToday}" class="list-group-item list-group-item-action sidebar-separator-title text-info">
-                      <span class="menu-collapsed">Today</span>
-                  </a>
-                  <a th:href="@{/admin/chartMonthToDate}" class="list-group-item list-group-item-action bg-dark text-white">
-                      <span class="menu-collapsed">This Month</span>
-                  </a>
-                  <a href="#" class="list-group-item list-group-item-action bg-dark text-white">
-                      <span class="menu-collapsed">Last Month</span>
-                  </a>
-                  <a href="#" class="list-group-item list-group-item-action bg-dark text-white">
-                      <span class="menu-collapsed">Last 3 Months</span>
-                  </a>
-              </div>
-              
-              
-              <!-- /END Separator -->
-              
-              <a href="#top" data-toggle="sidebar-colapse" class="bg-dark list-group-item list-group-item-action d-flex align-items-center">
-                  <div class="d-flex w-100 justify-content-start align-items-center">
-                      <span id="collapse-icon" class="fas fa-2x mr-3"></span>
-                      <span id="collapse-text" class="menu-collapsed">Collapse</span>
-                  </div>
-              </a>
-          </ul><!-- List Group END-->
-      </div><!-- sidebar-container END -->
-      <div>
-        <section>
-          <div>
-              <div class="row">
-                  <div class="col-md-12">
+  <div class="container-fluid">
+    <div class="row">
+      <div th:replace="sideBarMenuLayout :: sideBarMenu"></div>
+            <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-md-1">
+              <div class="col-md-12">
         <section class="text-left px-2 mt-2">
-          <span class="h3">DASHBOARD</span><span class="h6" th:text="${'Quotes , Orders & Invoices -  This Month ('+thisMonth+')'}"></span>
+          <span class="h3">DASHBOARD</span><span class="h6" th:text="${' Quotes , Orders & Invoices  -  This Month ('+thisMonth+' '+thisYear+')'}"></span>
         </section>
         <div class="album py-3 px-2 bg-light">
           <div class="row">
@@ -116,31 +38,31 @@
                     <div class="col-md-5" id="guage_div_quotes" ></div>
                     <div class="col-md-7 card-body" style="padding-top: 20px;">
                       <button type="button" class="btn btn-primary btn-sm" th:title="${'Total : $' + salesQuotesMTD}"><span th:text="${'Total : $ ' + salesQuotesMTD}"></span></button>
-                      <button type="button" class="btn btn-success btn-sm" th:title="${'Target : $' + salesTargetMTD}"><span th:text="${'Target : $ ' + salesTargetMTD}"></span></button>
-                      <div class="table-responsive mt-2 ml-2 mr-2 small">
+                      <button type="button" class="btn btn-success btn-sm" th:title="${'Target : $' + salesQuotesTargetMonthly}"><span th:text="${'Target : $ ' + salesQuotesTargetMonthly}"></span></button>
+                      <div class="table-responsive mt-2 ml-4 mr-2 small">
                       <table class="table table-sm table-bordered">
                         <thead>
-                          <tr>
-                            <th scope="col"> </th>
-                            <th scope="col">Actual</th>
-                            <th scope="col">Target</th>
+                          <tr class="d-flex">
+                            <th class="col-3" scope="col"> </th>
+                            <th class="col-3" scope="col">Actual</th>
+                            <th class="col-3" scope="col">Target</th>
                           </tr>
                         </thead>
                         <tbody>
-                          <tr>
-                            <th scope="row">Qty</th>
-                            <td th:text="${salesQuotesQtyMTD}"></td>
-                            <td>50</td>
+                          <tr class="d-flex">
+                            <th class="col-3" scope="row">Qty</th>
+                            <td class="col-3" th:text="${salesQuotesQtyMTD}"></td>
+                            <td class="col-3" th:text="${salesQuotesTargetQtyMonthly}"></td>
                          </tr>
-                          <tr>
-                            <th scope="row">Avg $</th>
-                            <td>910</td>
-                            <td>1000</td>
+                          <tr class="d-flex">
+                            <th class="col-3" scope="row">Avg $</th>
+                            <td class="col-3" th:text="${averageMonthlyQuotes}"></td>
+                            <td class="col-3" th:text="${averageMonthlyQuotesTarget}"></td>
                           </tr>
-                          <tr>
-                            <th scope="row">Avg GP %</th>
-                            <td>45</td>
-                            <td>65</td>
+                          <tr class="d-flex">
+                            <th class="col-3" scope="row">Avg GP %</th>
+                            <td class="col-3">45</td>
+                            <td class="col-3">65</td>
                           </tr>
                         </tbody>
                       </table>
@@ -157,31 +79,31 @@
                     <div class="col-md-5" id="guage_div_orders" ></div>
                     <div class="col-md-7 card-body" style="padding-top: 20px;">
                       <button type="button" class="btn btn-warning btn-sm" th:title="${'Total : $' + salesOrderedMTD}"><span th:text="${'Total : $ ' + salesOrderedMTD}"></span></button>
-                      <button type="button" class="btn btn-success btn-sm" th:title="${'Target : $' + salesTargetMTD}"><span th:text="${'Target : $ ' + salesTargetMTD}"></span></button>
-                      <div class="table-responsive mt-2 ml-2 mr-2 small">
+                      <button type="button" class="btn btn-success btn-sm" th:title="${'Target : $' + salesOrderedTargetMonthly}"><span th:text="${'Target : $ ' + salesOrderedTargetMonthly}"></span></button>
+                      <div class="table-responsive mt-2 ml-4 mr-2 small">
                       <table class="table table-sm table-bordered">
                         <thead>
-                          <tr>
-                            <th scope="col"> </th>
-                            <th scope="col">Actual</th>
-                            <th scope="col">Target</th>
+                          <tr class="d-flex">
+                            <th class="col-3" scope="col"> </th>
+                            <th class="col-3" scope="col">Actual</th>
+                            <th class="col-3" scope="col">Target</th>
                           </tr>
                         </thead>
                         <tbody>
-                          <tr>
-                            <th scope="row">Qty</th>
-                            <td th:text="${salesOrderedQtyMTD}"></td>
-                            <td>50</td>
+                          <tr class="d-flex">
+                            <th class="col-3" scope="row">Qty</th>
+                            <td class="col-3" th:text="${salesOrderedQtyMTD}"></td>
+                            <td class="col-3" th:text="${salesOrderedTargetQtyMonthly}"></td>
                          </tr>
-                          <tr>
-                            <th scope="row">Avg $</th>
-                            <td>910</td>
-                            <td>1000</td>
+                          <tr class="d-flex">
+                            <th class="col-3" scope="row">Avg $</th>
+                            <td class="col-3" th:text="${averageMonthlyOrders}"></td>
+                            <td class="col-3" th:text="${averageMonthlyOrdersTarget}"></td>
                           </tr>
-                          <tr>
-                            <th scope="row">Avg GP %</th>
-                            <td>45</td>
-                            <td>65</td>
+                          <tr class="d-flex">
+                            <th class="col-3" scope="row">Avg GP %</th>
+                            <td class="col-3">45</td>
+                            <td class="col-3">65</td>
                           </tr>
                         </tbody>
                       </table>
@@ -198,31 +120,31 @@
                     <div class="col-md-5" id="guage_div_invoices" ></div>
                     <div class="col-md-7 card-body" style="padding-top: 20px;">
                       <button type="button" class="btn btn-danger btn-sm" th:title="${'Total : $' + salesInvoicedMTD}"><span th:text="${'Total : $ ' + salesInvoicedMTD}"></span></button>
-                      <button type="button" class="btn btn-success btn-sm" th:title="${'Target : $' + salesTargetMTD}"><span th:text="${'Target : $ ' + salesTargetMTD}"></span></button>
-                      <div class="table-responsive mt-2 ml-2 mr-2 small">
+                      <button type="button" class="btn btn-success btn-sm" th:title="${'Target : $' + salesInvoicedTargetMonthly}"><span th:text="${'Target : $ ' + salesInvoicedTargetMonthly}"></span></button>
+                      <div class="table-responsive mt-2 ml-4 mr-2 small">
                       <table class="table table-sm table-bordered">
                         <thead>
-                          <tr>
-                            <th scope="col"> </th>
-                            <th scope="col">Actual</th>
-                            <th scope="col">Target</th>
+                          <tr class="d-flex">
+                            <th class="col-3" scope="col"> </th>
+                            <th class="col-3" scope="col">Actual</th>
+                            <th class="col-3" scope="col">Target</th>
                           </tr>
                         </thead>
                         <tbody>
-                          <tr>
-                            <th scope="row">Qty</th>
-                            <td th:text="${salesInvoicedQtyMTD}"></td>
-                            <td>50</td>
+                          <tr class="d-flex">
+                            <th class="col-3" scope="row">Qty</th>
+                            <td class="col-3" th:text="${salesInvoicedQtyMTD}"></td>
+                            <td class="col-3" th:text="${salesInvoicedTargetQtyMonthly}"></td>
                          </tr>
-                          <tr>
-                            <th scope="row">Avg $</th>
-                            <td>910</td>
-                            <td>1000</td>
+                          <tr class="d-flex">
+                            <th class="col-3" scope="row">Avg $</th>
+                            <td class="col-3" th:text="${averageMonthlyInvoices}"></td>
+                            <td class="col-3" th:text="${averageMonthlyInvoicesTarget}"></td>
                           </tr>
-                          <tr>
-                            <th scope="row">Avg GP %</th>
-                            <td>45</td>
-                            <td>65</td>
+                          <tr class="d-flex">
+                            <th class="col-3" scope="row">Avg GP %</th>
+                            <td class="col-3">45</td>
+                            <td class="col-3">65</td>
                           </tr>
                         </tbody>
                       </table>
@@ -235,18 +157,14 @@
               </div>
               </div>
               </div>
-              </div>
+            </main>
             </div>
-         </section>
+         </div>
         </div>
-        </div><!-- body-row END -->
-
         <!-- Footer -->
-<footer class="footer mt-auto py-3">
-  <div class="container">
-    <p>&copy; 2020 <a href="http://onesysconsulting.com.au/">OneSysConsulting</a>. All rights reserved.</a>.</p>
-  </div>
-</footer>
+        <footer class="footer mt-auto py-3">
+          <div th:replace="footerLayout :: footer"> </div>
+        </footer>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <!-- jQuery -->
@@ -258,33 +176,7 @@
 <!-- Google chart -->
 <script type="text/javascript" src="../js/loader.js"></script>
 <script th:inline="javascript">
-  $('#body-row .collapse').collapse('hide'); 
-
-// Collapse/Expand icon
-$('#collapse-icon').addClass('fa-angle-double-left'); 
-
-// Collapse click
-$('[data-toggle=sidebar-colapse]').click(function() {
-    SidebarCollapse();
-});
-
-function SidebarCollapse () {
-    $('.menu-collapsed').toggleClass('d-none');
-    $('.sidebar-submenu').toggleClass('d-none');
-    $('.submenu-icon').toggleClass('d-none');
-    $('#sidebar-container').toggleClass('sidebar-expanded sidebar-collapsed');
-    
-    // Treating d-flex/d-none on separators with title
-    var SeparatorTitle = $('.sidebar-separator-title');
-    if ( SeparatorTitle.hasClass('d-flex') ) {
-        SeparatorTitle.removeClass('d-flex');
-    } else {
-        SeparatorTitle.addClass('d-flex');
-    }
-    
-    // Collapse/Expand icon
-    $('#collapse-icon').toggleClass('fa-angle-double-left fa-angle-double-right');
-}
+  
   /*<![CDATA[*/
 
   var salesOrderedMTD = /*[[${salesOrderedMTD}]]*/ '0';
@@ -461,6 +353,5 @@ function SidebarCollapse () {
   }
   
     </script>
-</script>
   </body>
     </html>
