--- a/src/main/resources/templates/admin/chartToday.html
+++ b/src/main/resources/templates/admin/chartToday.html
@@ -27,136 +27,37 @@
             <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-md-1">
               <div class="col-md-12">
                 <section class="text-left px-2 mt-2">
-                  <span class="h3">DASHBOARD</span><span class="h6" th:text="${'Quotes , Orders & Invoices -  Today ('+toDay+')'}"></span>
+                  <span class="h3">DASHBOARD</span><span class="h6" th:text="${' Quotes , Orders & Invoices -  Today ('+toDay+')'}"></span>
                 </section>
                 <div class="album py-3 px-2 bg-light">
                   <div class="row">
                       <div class="col-md-4">
                         <div class="card mb-4 shadow-sm">
                           <div class="card-header h3">Quotes</div>
-                          <div class="row no-gutters">
-                            <div class="col-md-5" id="guage_div_quotes" ></div>
-                            <div class="col-md-7 card-body" style="padding-top: 20px;">
-                              <button type="button" class="btn btn-primary btn-sm" th:title="${'Total : $' + salesQuotesDaily}"><span th:text="${'Total : $ ' + salesQuotesDaily}"></span></button>
-                              <button type="button" class="btn btn-success btn-sm" th:title="${'Target : $' + salesQuotesTargetDaily}"><span th:text="${'Target : $ ' + salesQuotesTargetDaily}"></span></button>
-                              <div class="table-responsive mt-2 ml-4 mr-2 small">
-                              <table class="table table-sm table-bordered">
-                                <thead>
-                                  <tr class="d-flex">
-                                    <th class="col-3" scope="col"> </th>
-                                    <th class="col-3" scope="col">Actual</th>
-                                    <th class="col-3" scope="col">Target</th>
-                                  </tr>
-                                </thead>
-                                <tbody>
-                                  <tr class="d-flex">
-                                    <th class="col-3" scope="row">Qty</th>
-                                    <td class="col-3" th:text="${salesQuotesQtyDaily}"></td>
-                                    <td class="col-3" th:text="${salesQuotesTargetQtyDaily}"></td>
-                                 </tr>
-                                  <tr class="d-flex">
-                                    <th class="col-3" scope="row">Avg $</th>
-                                    <td class="col-3" th:text="${averageDailyQuotes}"></td>
-                                    <td class="col-3" th:text="${averageDailyQuotesTarget}"></td>
-                                  </tr>
-                                  <tr class="d-flex">
-                                    <th class="col-3" scope="row">Avg GP %</th>
-                                    <td class="col-3">45</td>
-                                    <td class="col-3">65</td>
-                                  </tr>
-                                </tbody>
-                              </table>
-                            </div>
-                            </div>
-                            </div>
-                            <div id="graph_div_quotes" style="width: 500px; height: 500px;"></div>
-                        </div>
+                              <div class="card-body d-flex justify-content-center" id="guage_div_quotes"></div>
+                              <div th:replace="admin/dashboardCardLayout :: cardFields(totalValue=${salesQuotesDaily}, targetValue=${salesQuotesTargetDaily}, qtyValue=${salesQuotesQtyDaily}, qtyTarget=${salesQuotesTargetQtyDaily},avgValue=${averageDailyQuotes},avgTarget=${averageDailyQuotesTarget},avgProfitValue=${averageDailyQuotesProfit},avgProfitTarget=${averageDailyQuotesProfitTarget})"> </div>
+                            <div id="graph_div_quotes" class="d-flex justify-content-center"></div>
+                          </div>
                       </div>
                       <div class="col-md-4">
                         <div class="card mb-4 shadow-sm">
-                          <div class="card-header h3">Orders</div>
-                          <div class="row no-gutters">
-                            <div class="col-md-5" id="guage_div_orders" ></div>
-                            <div class="col-md-7 card-body" style="padding-top: 20px;">
-                              <button type="button" class="btn btn-warning btn-sm" th:title="${'Total : $' + salesOrderedDaily}"><span th:text="${'Total : $ ' + salesOrderedDaily}"></span></button>
-                              <button type="button" class="btn btn-success btn-sm" th:title="${'Target : $' + salesOrderedTargetDaily}"><span th:text="${'Target : $ ' + salesOrderedTargetDaily}"></span></button>
-                              <div class="table-responsive mt-2 ml-4 mr-2 small">
-                              <table class="table table-sm table-bordered">
-                                <thead>
-                                  <tr class="d-flex">
-                                    <th class="col-3" scope="col"> </th>
-                                    <th class="col-3" scope="col">Actual</th>
-                                    <th class="col-3" scope="col">Target</th>
-                                  </tr>
-                                </thead>
-                                <tbody>
-                                  <tr class="d-flex">
-                                    <th class="col-3" scope="row">Qty</th>
-                                    <td class="col-3" th:text="${salesOrderedQtyDaily}"></td>
-                                    <td class="col-3" th:text="${salesOrderedTargetQtyDaily}"></td>
-                                 </tr>
-                                  <tr class="d-flex">
-                                    <th class="col-3" scope="row">Avg $</th>
-                                    <td class="col-3" th:text="${averageDailyOrders}"></td>
-                                    <td class="col-3" th:text="${averageDailyOrdersTarget}"></td>
-                                  </tr>
-                                  <tr class="d-flex">
-                                    <th class="col-3" scope="row">Avg GP %</th>
-                                    <td class="col-3">45</td>
-                                    <td class="col-3">65</td>
-                                  </tr>
-                                </tbody>
-                              </table>
-                            </div>
-                            </div>
-                            </div>
-                            <div id="graph_div_orders" style="width: 500px; height: 500px;"></div>
-                        </div>
-                      </div>
+                            <div class="card-header h3">Orders</div>
+                                <div class="card-body d-flex justify-content-center" id="guage_div_orders"></div>
+                                <div th:replace="admin/dashboardCardLayout :: cardFields(totalValue=${salesOrderedDaily}, targetValue=${salesOrderedTargetDaily}, qtyValue=${salesOrderedQtyDaily}, qtyTarget=${salesOrderedTargetQtyDaily},avgValue=${averageDailyOrders},avgTarget=${averageDailyOrdersTarget},avgProfitValue=${averageDailyOrdersProfit},avgProfitTarget=${averageDailyOrdersProfitTarget})"> </div>
+                                <div id="graph_div_orders" class="d-flex justify-content-center"></div>
+                              </div>
+                          </div>
                       <div class="col-md-4">
                         <div class="card mb-4 shadow-sm">
                           <div class="card-header h3">Invoices</div>
-                          <div class="row no-gutters">
-                            <div class="col-md-5" id="guage_div_invoices" ></div>
-                            <div class="col-md-7 card-body" style="padding-top: 20px;">
-                              <button type="button" class="btn btn-danger btn-sm" th:title="${'Total : $' + salesInvoicedDaily}"><span th:text="${'Total : $ ' + salesInvoicedDaily}"></span></button>
-                              <button type="button" class="btn btn-success btn-sm" th:title="${'Target : $' + salesInvoicedTargetDaily}"><span th:text="${'Target : $ ' + salesInvoicedTargetDaily}"></span></button>
-                              <div class="table-responsive mt-2 ml-4 mr-2 small">
-                              <table class="table table-sm table-bordered">
-                                <thead>
-                                  <tr class="d-flex">
-                                    <th scope="col" class="col-3"> </th>
-                                    <th class="col-3" scope="col">Actual</th>
-                                    <th class="col-3" scope="col">Target</th>
-                                  </tr>
-                                </thead>
-                                <tbody>
-                                  <tr class="d-flex">
-                                    <th scope="row" class="col-3">Qty</th>
-                                    <td class="col-3" th:text="${salesInvoicedQtyDaily}"></td>
-                                    <td class="col-3" th:text="${salesInvoicedTargetQtyDaily}"></td>
-                                 </tr>
-                                  <tr class="d-flex">
-                                    <th scope="row" class="col-3">Avg $</th>
-                                    <td class="col-3" th:text="${averageDailyInvoices}"></td>
-                                    <td class="col-3" th:text="${averageDailyInvoicesTarget}"></td>
-                                  </tr>
-                                  <tr class="d-flex">
-                                    <th scope="row" class="col-3">Avg GP %</th>
-                                    <td class="col-3">45</td>
-                                    <td class="col-3">65</td>
-                                  </tr>
-                                </tbody>
-                              </table>
+                              <div class="card-body d-flex justify-content-center" id="guage_div_invoices"></div>
+                              <div th:replace="admin/dashboardCardLayout :: cardFields(totalValue=${salesInvoicedDaily}, targetValue=${salesInvoicedTargetDaily}, qtyValue=${salesInvoicedQtyDaily}, qtyTarget=${salesInvoicedTargetQtyDaily},avgValue=${averageDailyOrders},avgTarget=${averageDailyOrdersTarget},avgProfitValue=${averageDailyInvoicesProfit},avgProfitTarget=${averageDailyInvoicesProfitTarget})"> </div>
+                              <div id="graph_div_invoices" class="d-flex justify-content-center"></div>
                             </div>
-                            </div>
-                            </div>
-                            <div id="graph_div_invoices" style="width: 500px; height: 500px;"></div>
-                        </div>
-                      </div>
-                      </div>
-                      </div>
-                      </div>
+                          </div>   
+                  </div>
+                </div>
+              </div>
             </main>
       </div>
   </div>
@@ -208,14 +109,14 @@
         ]);
 
     var optionsQuotes = {
-          width: 700,
+          width: 800,
           height: 220,
           redColor:'#0069D9',
           redFrom: 0,
           redTo: targetAchievedQuotes,
           greenFrom:targetAchievedQuotes,
           greenTo: 100,
-          minorTicks: 5
+          minorTicks: 5,
         };
 
         var chartQuotes = new google.visualization.Gauge(document.getElementById('guage_div_quotes'));
@@ -228,7 +129,7 @@
         ]);
 
     var optionsOrders = {
-          width: 700,
+          width: 800,
           height: 220,
           yellowFrom: 0,
           yellowTo: targetAchievedOrders,
@@ -247,7 +148,7 @@
         ]);
 
     var optionsInvoices = {
-          width: 700,
+          width: 800,
           height: 220,
           redFrom: 0,
           redTo: targetAchievedInvoices,
