--- a/src/main/resources/templates/headerLayout.html
+++ b/src/main/resources/templates/headerLayout.html
@@ -14,7 +14,7 @@
                  <a class="nav-link text-info"  th:href="@{/admin/home}"><i class="fas fa-home"></i>Home</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link text-info" href="/dashboard/logout"><i class="fas fa-sign-out-alt"></i>Logout</a>
+                <a class="nav-link text-info" href="/logout"><i class="fas fa-sign-out-alt"></i>Logout</a>
             </li>
             <!-- This menu is hidden in bigger devices with d-sm-none. 
            The sidebar isn't proper for smaller screens imo, so this dropdown menu can keep all the useful sidebar itens exclusively for smaller screens  -->
