--- a/src/main/resources/templates/sideBarMenuLayout.html
+++ b/src/main/resources/templates/sideBarMenuLayout.html
@@ -31,13 +31,13 @@
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" th:href="@{/admin/chartMonthToDate}">
+          <a class="nav-link" th:href="@{/admin/chartLastMonth}">
             <span class="fas fa-chart-area fa-fw mr-3"></span>
             Last month
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" th:href="@{/admin/chartMonthToDate}">
+          <a class="nav-link" th:href="@{/admin/chartLastThreeMonths}">
             <span class="fas fa-chart-line fa-fw mr-3"></span>
             Last 3 months
           </a>
