--- a/src/main/resources/templates/admin/home.html
+++ b/src/main/resources/templates/admin/home.html
@@ -24,12 +24,14 @@
     <header>
         <!-- Bootstrap NavBar -->
     <!-- Bootstrap NavBar -->
-    <div th:replace="headerLayout :: header"> </div>
+    <div th:replace="headerLayout :: header(isFullScreen=${isFullScreen})"> </div>
     </header>
     <div class="container-fluid">
         <div class="row">
-          <div th:replace="sideBarMenuLayout :: sideBarMenu"> </div>
-                <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-md-1">
+            <th:block th:if=${!isFullScreen}>
+          <div th:replace="sideBarMenuLayout :: sideBarMenu(homeListClass='nav-item bg-info',todayListClass='nav-item',thisMonthListClass='nav-item',lastMonthListClass='nav-item',last3MonthsListClass='nav-item',homeLinkClass='nav-link text-warning',todayLinkClass='nav-link',thisMonthLinkClass='nav-link',lastMonthLinkClass='nav-link',last3MonthsLinkClass='nav-link')"> </div>
+          </th:block>
+                <main role="main" th:class="${isFullScreen?'col-md-12 ml-sm-auto col-lg-12 px-md-1':'col-md-9 ml-sm-auto col-lg-10 px-md-1'}">
                   <div class="col-md-12">
     <noscript><strong>We're sorry but client doesn't work properly without JavaScript enabled. Please enable it to
             continue.</strong></noscript><span
